# satBuild

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  Dockerfile.sim  PLAN.md  README.md  TODOS.md  config.yaml  docker-compose.yml  install-agent.sh  pyproject.toml  sat.py  sat_agent.py
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml  pypi-publish.yml
demo/: csh-config.yaml  demo.tape
docs/: index.html  satellite-agent-interface.md
docs/designs/: vercel-for-cubesats.md
docs/outreach/: posts.md
experiments/: flatsat-test-plan.md  lab-data-questions.md  loss-pattern-format.md  sdr-primer.md  visualize_smoke.py
experiments/lib/: parse_pass_log.py  pdu.sh
init/: flatsat.csh  test-config.yaml
libcsp-py3/: meson.build  pycsp.c  pyproject.toml
libcsp-py3/subprojects/: csp
notes/features/: clean-refactor.md  rollback-by-hash.md  rollback.md  sat-agent-status.md  week-3-logs-history-errors.md
plans/: PLAN2.md  PLAN3.md
satdeploy/: __init__.py  bsdiff_util.py  cli.py  config.py  demo.py  dependencies.py  deployer.py  doctor.py  errors.py  fleet.py  history.py  iterate.py  output.py  paths.py  provenance.py  templates.py  watch.py
satdeploy-agent/: meson.build  yocto_cross.ini
satdeploy-agent/include/: satdeploy_agent.h  session_state.h  version.h.in
satdeploy-agent/lib/: csp  dtp  param
satdeploy-agent/proto/: deploy.pb-c.c  deploy.pb-c.h  deploy.proto
satdeploy-agent/src/: app_metadata.c  backup_manager.c  deploy_handler.c  dtp_client.c  main.c  session_state.c
satdeploy-apm/: meson.build
satdeploy-apm/lib/: apm_csh  dtp  slash
satdeploy-apm/src/: config.c  config.h  deploy.pb-c.c  deploy.pb-c.h  history.c  history.h  output.c  output.h  satdeploy_apm.c  sha256.c  sha256.h
satdeploy/csp/proto/: deploy.proto  deploy_pb2.py
satdeploy/dashboard/: __init__.py  app.py  git_utils.py  security.py
satdeploy/dashboard/static/: style.css
satdeploy/dashboard/templates/: _ticker.html  base.html  home.html  iteration.html  iteration_404.html
satdeploy/transport/: base.py  csp.py  local.py  ssh.py
scripts/: debuginfod_demo.sh  dev-shell.sh  docker-dev.sh  docker-entry.sh  docker-test.sh  feasibility_test.py  make-test-apps.sh
tests/: test_bsdiff_util.py  test_cli_fleet.py  test_cli_init.py  test_cli_list.py  test_cli_logs.py  test_cli_push.py  test_cli_rollback.py  test_cli_status.py  test_cli_transport.py  test_config.py  test_dashboard_home.py  test_dashboard_iteration.py  test_demo.py  test_dependencies.py  test_deployer.py  test_doctor.py  test_errors.py  test_feasibility_harness.py  test_fleet.py  test_history.py  test_history_source_column.py  test_integration_csp.py  test_integration_ssh.py  test_iterate.py  test_output.py  test_paths.py  test_provenance.py  test_push_list_integration.py  test_sat.py  test_sat_agent.py  test_templates.py  test_transport_base.py  test_transport_csp.py  test_transport_local.py  test_transport_ssh.py
